# Web_HW_10

HW_10/Django_HW/: pyproject.toml
HW_10/Django_HW/quotes_hw/autors/: urls.py  views.py
HW_10/Django_HW/quotes_hw/quotes_hw/: settings.py
HW_10/Django_HW/quotes_hw/quotes_web_hw/migrations/: 0001_initial.py  0002_alter_quote_author_delete_author.py  0003_delete_tag_alter_quote_tags.py
HW_10/Django_HW/quotes_hw/tags/: models.py
HW_10/Django_HW/quotes_hw/tags/migrations/: 0001_initial.py
